fix backend bones

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,16 @@
 {
   "name": "backend",
-  "version": "1.0.0",
-  "description": "Backend for telegram group management app",
-  "author": "darkwoolf <woolftreuser@gmail.com>",
-  "keywords": [],
-  "license": "ISC",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/darkwoolf10/films_radnik.git"
-  },
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "./bin/app",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "http-errors": "^1.7.3",
-    "pino": "^6.3.2",
-    "pino-http": "^5.2.0",
-    "pino-pretty": "^4.0.0"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
